changes between tech and veh

--- a/vehicles.html
+++ b/vehicles.html
@@ -213,338 +213,98 @@
               alt="Hamilcar en action ou usine"
             />
           </div>
+                 <div class="container">
+            <div class="section-header" data-aos="fade-up">
+              <h2
+                class="section-title"
+                data-translatable
+                data-fr="Nos Véhicules"
+                data-en="Our Vehicles"
+                data-ar="مركباتنا"
+              >
+                Nos Véhicules
+              </h2>
+              <p
+                class="section-subtitle"
+                data-translatable
+                data-fr="Découvrez notre gamme adaptée à vos besoins."
+                data-en="Discover our range tailored to your needs."
+                data-ar="اكتشف مجموعتنا المناسبة لاحتياجاتك."
+              >
+                Découvrez notre gamme adaptée à vos besoins.
+              </p>
+            </div>
 
-          <div
-            class="key-features-grid"
-            data-aos="fade-up"
-            data-aos-delay="200"
-          >
-            <div class="feature-item">
-              <h4
-                data-translatable
-                data-fr="Carrosserie"
-                data-en="Body"
-                data-ar="هيكل"
-              >
-                Carrosserie
-              </h4>
-              <table class="feature-table">
-                <tbody>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Type"
-                      data-en="Type"
-                      data-ar="النوع"
-                    >
-                      Type
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="Pick up"
-                      data-en="Pick up"
-                      data-ar="بيك أب"
-                    >
-                      Pick up
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Volume caisse"
-                      data-en="Body Volume"
-                      data-ar="حجم الصندوق"
-                    >
-                      Volume caisse
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="1,15 m³"
-                      data-en="1.15 m³"
-                      data-ar="1.15 م³"
-                    >
-                      1,15 m³
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Nombre de places"
-                      data-en="Number of Seats"
-                      data-ar="عدد المقاعد"
-                    >
-                      Nombre de places
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="4 places"
-                      data-en="4 seats"
-                      data-ar="4 مقاعد"
-                    >
-                      4 places
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="feature-item">
-              <h4
-                data-translatable
-                data-fr="Poids et Dimensions"
-                data-en="Weight and Dimensions"
-                data-ar="الوزن والأبعاد"
-              >
-                Poids et Dimensions
-              </h4>
-              <table class="feature-table">
-                <tbody>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="PTC"
-                      data-en="GVW"
-                      data-ar="الوزن الإجمالي"
-                    >
-                      PTC
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="3500 Kg"
-                      data-en="3500 Kg"
-                      data-ar="3500 كجم"
-                    >
-                      3500 Kg
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Charge utile"
-                      data-en="Payload"
-                      data-ar="الحمولة"
-                    >
-                      Charge utile
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="1000 Kg"
-                      data-en="1000 Kg"
-                      data-ar="1000 كجم"
-                    >
-                      1000 Kg
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Garde au sol"
-                      data-en="Ground Clearance"
-                      data-ar="الخلوص الأرضي"
-                    >
-                      Garde au sol
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="400 mm"
-                      data-en="400 mm"
-                      data-ar="400 مم"
-                    >
-                      400 mm
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Rayon Braquage"
-                      data-en="Turning Radius"
-                      data-ar="نصف قطر الدوران"
-                    >
-                      Rayon Braquage
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="~ 6 m"
-                      data-en="~ 6 m"
-                      data-ar="~ 6 م"
-                    >
-                      ~ 6 m
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="feature-item">
-              <h4
-                data-translatable
-                data-fr="Moteur"
-                data-en="Engine"
-                data-ar="المحرك"
-              >
-                Moteur
-              </h4>
-              <table class="feature-table">
-                <tbody>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Nombre de cylindres"
-                      data-en="Number of Cylinders"
-                      data-ar="عدد الأسطوانات"
-                    >
-                      Nombre de cylindres
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="4 ou 8"
-                      data-en="4 or 8"
-                      data-ar="4 أو 8"
-                    >
-                      4 ou 8
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Puissance"
-                      data-en="Power"
-                      data-ar="القوة"
-                    >
-                      Puissance
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="de 90 à 275 kW"
-                      data-en="from 90 to 275 kW"
-                      data-ar="من 90 إلى 275 كيلوات"
-                    >
-                      de 90 à 275 kW
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Énergie"
-                      data-en="Energy"
-                      data-ar="الطاقة"
-                    >
-                      Énergie
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="Diesel"
-                      data-en="Diesel"
-                      data-ar="ديزل"
-                    >
-                      Diesel
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Autonomie"
-                      data-en="Range"
-                      data-ar="المدى"
-                    >
-                      Autonomie
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="de 750 à 1000 Km"
-                      data-en="from 750 to 1000 Km"
-                      data-ar="من 750 إلى 1000 كم"
-                    >
-                      de 750 à 1000 Km
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="feature-item">
-              <h4
-                data-translatable
-                data-fr="Transmission"
-                data-en="Transmission"
-                data-ar="نقل الحركة"
-              >
-                Transmission
-              </h4>
-              <table class="feature-table">
-                <tbody>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Type"
-                      data-en="Type"
-                      data-ar="النوع"
-                    >
-                      Type
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="4x4 drive, Manuelle"
-                      data-en="4x4 drive, Manual"
-                      data-ar="دفع 4x4، يدوي"
-                    >
-                      4x4 drive, Manuelle
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Frein AV et AR"
-                      data-en="Front and Rear Brake"
-                      data-ar="المكابح الأمامية والخلفية"
-                    >
-                      Frein AV et AR
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="À disque"
-                      data-en="Disc"
-                      data-ar="قرص"
-                    >
-                      À disque
-                    </td>
-                  </tr>
-                  <tr>
-                    <th
-                      data-translatable
-                      data-fr="Pneus"
-                      data-en="Tires"
-                      data-ar="الإطارات"
-                    >
-                      Pneus
-                    </th>
-                    <td
-                      data-translatable
-                      data-fr="9,00 R16"
-                      data-en="9.00 R16"
-                      data-ar="9.00 R16"
-                    >
-                      9,00 R16
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-
-          <div
-            class="section-footer-link"
-            data-aos="fade-up"
-            data-aos-delay="300"
-          >
-            <a
-              href="#contact"
-              class="cta-button"
-              data-translatable
-              data-fr="Cliquer pour avoir les specifications complètes"
-              data-en="Click to get full specifications"
-              data-ar="انقر للحصول على المواصفات الكاملة"
+            <div
+              class="vehicules-layout"
+              data-aos="fade-up"
+              data-aos-delay="100"
             >
-              Cliquer pour avoir les specifications complètes
-            </a>
+              <div class="vehicle-card">
+                <img
+                  src="/assets/images/PICK UP 4 Portes.png"
+                  alt="PICK UP 4 Portes"
+                />
+                <div
+                  class="vehicle-title"
+                  data-translatable
+                  data-fr="PICK UP 4 Portes"
+                  data-en="PICK UP 4 Doors"
+                  data-ar="بيك أب 4 أبواب"
+                >
+                  PICK UP 4 Portes
+                </div>
+              </div>
+
+              <div class="vehicle-card">
+                <img
+                  src="/assets/images/PICK UP 2 Portes.png"
+                  alt="PICK UP 2 Portes"
+                />
+                <div
+                  class="vehicle-title"
+                  data-translatable
+                  data-fr="PICK UP 2 Portes"
+                  data-en="PICK UP 2 Doors"
+                  data-ar="بيك أب 2 أبواب"
+                >
+                  PICK UP 2 Portes
+                </div>
+              </div>
+
+              <div class="vehicle-card">
+                <img src="/assets/images/SUV.png" alt="SUV" />
+                <div
+                  class="vehicle-title"
+                  data-translatable
+                  data-fr="SUV"
+                  data-en="SUV"
+                  data-ar="SUV"
+                >
+                  SUV
+                </div>
+              </div>
+
+              <div class="vehicle-card">
+                <img
+                  src="/assets/images/VEHICLE COMMERCIAL.png"
+                  alt="VEHICLE COMMERCIAL"
+                />
+                <div
+                  class="vehicle-title"
+                  data-translatable
+                  data-fr="VEHICLE COMMERCIAL"
+                  data-en="COMMERCIAL VEHICLE"
+                  data-ar="مركبة تجارية"
+                >
+                  VEHICLE COMMERCIAL
+                </div>
+              </div>
+            </div>
           </div>
+       
+
+
         </div>
       </section>
     </main>
