--- a/technology.html
+++ b/technology.html
@@ -593,16 +593,18 @@
             data-aos="fade-up"
             data-aos-delay="300"
           >
-            <a
-              href="#contact"
+           <a
+              href="assets/specifications.pdf"
               class="cta-button"
+              download
               data-translatable
               data-fr="Cliquer pour avoir les specifications complètes"
               data-en="Click to get full specifications"
-              data-ar="انقر للحصول على المواصفات الكاملة"
+              data-ar="انقر للحصول على المواصفات الكاملة" 
             >
               Cliquer pour avoir les specifications complètes
             </a>
+
           </div>
 
           <div class="video-section" data-aos="fade-up" data-aos-delay="400">
