--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   <header id="header" class="sticky">
+     <header id="header" class="sticky">
       <nav class="container">
         <a href="#hero" class="logo-link">
           <img
@@ -147,7 +147,7 @@
           <h1
             data-aos="fade-down"
             data-translatable
-            data-fr="HAMILCAR"
+            data-fr="HAMILCddAR"
             data-en="HAMILCAR"
             data-ar="هاميكار"
           >
