--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <ul class="nav-links">
           <li>
             <a
-              href="/about-legacy.html"
+              href="/"
               data-translatable
               data-fr="Présentation"
               data-en="About Us"
