--- a/vehicles.html
+++ b/vehicles.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header" class="sticky">
+  <header id="header" class="sticky">
       <nav class="container">
         <a href="#hero" class="logo-link">
           <img
@@ -38,7 +38,7 @@
         <ul class="nav-links">
           <li>
             <a
-              href="/about-legacy.html"
+              href="/"
               data-translatable
               data-fr="Présentation"
               data-en="About Us"
